<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_height"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_textSizeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgButton_fav"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

    <ImageButton
        android:id="@+id/imgButton_trailer"
        android:contentDescription="@string/image_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/tv_margin"
        android:layout_marginRight="@dimen/tv_margin"
        app:layout_constraintEnd_toStartOf="@+id/imgButton_fav"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster"
        app:srcCompat="@drawable/ic_play_circle_outline_yellow_24dp" />

    <ImageButton
        android:id="@+id/imgButton_fav"
        android:contentDescription="@string/image_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/tv_margin"
        android:layout_marginRight="@dimen/tv_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster"
        app:srcCompat="@drawable/ic_favorite_border_24dp" />

    <TextView
        android:id="@+id/tv_detail_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgButton_fav"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <TextView
        android:id="@+id/tv_detail_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tv_margin"
        android:padding="@dimen/tv_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_release" />

    <TextView
        android:id="@+id/tv_label_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin"
        android:layout_marginLeft="@dimen/tv_margin"
        android:text="@string/label_vote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview" />

    <TextView
        android:id="@+id/tv_detail_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin"
        android:layout_marginLeft="@dimen/tv_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
        app:layout_constraintStart_toEndOf="@+id/tv_label_vote" />

    <TextView
        android:id="@+id/tv_label_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:layout_marginLeft="@dimen/tv_margin_start"
        android:text="@string/label_pop"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_vote"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview" />

    <TextView
        android:id="@+id/tv_detail_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin"
        android:layout_marginLeft="@dimen/tv_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
        app:layout_constraintStart_toEndOf="@+id/tv_label_pop" />

    <Button
        android:id="@+id/b_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/tv_margin"
        android:layout_marginRight="@dimen/tv_margin"
        android:text="@string/button_reviews"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_detail_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>

